# fido-app

./: .env.production.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: ci.yml  deploy-infrastructure.yml  deploy.yml
.interface-design/: system.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_stripe_identity.py  0003_manual_identity_review.py
backend/app/: __init__.py  config.py  fraud.py  main.py  models.py  providers.py  retention.py  schemas.py  security.py  services.py
backend/scripts/: export_openapi.py  seed_development.py
backend/tests/: conftest.py  test_contract.py  test_identity.py  test_manual_identity_api.py  test_persona_provider.py  test_security.py  test_stripe_identity_provider.py  test_tenant_custody_lookup.py
deploy/: Caddyfile  README.md  activate-staging.sh  bootstrap-db.sql  bootstrap-host.sh  deploy.sh  fido-retention.service  fido-retention.timer  run-retention.sh
docs/: LEGAL_AND_PRIVACY_GATES.md  MANUAL_IDENTITY_RECONCILIATION_PLAN.md  SECURITY.md  STRIPE_IDENTITY_AND_FRAUD_PLAN.md  THREAT_MODEL.md
evidence/: CHECKLIST_EVIDENCE.md
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
infra/: cdk.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
scripts/: verify.sh
(+51 files in other folders)
