[project]
name = "fido-backend"
version = "0.1.0"
description = "Fido cross-shelter custody history API"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.16.4",
  "cryptography==49.0.0",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "psycopg[binary,pool]==3.2.9",
  "pydantic-settings==2.10.1",
  "pyjwt[crypto]==2.13.0",
  "python-json-logger==3.3.0",
  "sqlalchemy[asyncio]==2.0.43",
  "starlette==1.3.1",
  "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
  "aiosqlite==0.21.0",
  "mypy==1.17.1",
  "pip-audit==2.9.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==6.2.1",
  "ruff==0.12.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "B008", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
